--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,6 +5,7 @@
     --third-color: #575757;
     --background-color: #fafafa;
     font-family: "Work Sans", Arial, Helvetica;
+    scroll-behavior: smooth;
 }
 
 p {
@@ -348,10 +349,6 @@ section.services .container h3 {
     text-transform: capitalize;
 }
 
-section.services .container h3::selection {
-    background-color: var(--main-color);
-}
-
 section.services i {
     font-size: 30px;
     color: var(--main-color);
@@ -373,7 +370,7 @@ section.services .container p {
     color: #4d4c4c;
 }
 
-section.services .container p::selection {
+section.services .container p::selection, section.services .container h3::selection {
     background-color: var(--main-color);
 }
 
@@ -436,10 +433,17 @@ section.portfolio .container {
 
 section.portfolio .box {
     background-color: white;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+section.portfolio .box:hover {
+    transform: translateY(-10px);
 }
 
 section.portfolio .text {
     padding: 20px;
+
 }
 
 section.portfolio .text h3 {
@@ -447,6 +451,10 @@ section.portfolio .text h3 {
     font-size: 20px;
     margin-bottom: 20px;
     color: #1f2021;
+}
+
+section.portfolio .text h3::selection,  section.portfolio .text p::selection {
+    background-color: var(--main-color);
 }
 
 section.portfolio .text p {
@@ -465,3 +473,93 @@ section.portfolio img {
     }
 }
 /* portfolio end */
+
+/* about start */
+section.about {
+    padding: 0 50px 50px 50px;
+}
+
+section.about .container {
+    margin-top: 100px;
+    display: flex;
+}
+
+section.about .container .text {
+    margin-left: 100px;
+}
+
+section.about .container .text::selection {
+    background-color: var(--main-color);
+}
+
+section.about .container p:first-of-type {
+    font-weight: 800;
+    font-size: 20px;
+    color: var(--secondary-color);
+    margin-bottom: 40px;
+}
+
+section.about .container p:last-of-type {
+    font-size: 15px;
+    color: var(--third-color);
+}
+
+section.about .container .image-container {
+    position: relative;
+}
+
+section.about img {
+    width: 330px;
+    height: 330px;
+}
+
+section.about .container .image-container::before {
+    content: '';
+    position: absolute;
+    top: -40px;
+    left: 0;
+    width: 80px;
+    height: calc(100% + 80px);
+    background-color: #fafafa;
+    z-index: -1;
+}
+
+section.about .container .image-container::after {
+    content: '';
+    position: absolute;
+    top: -40px;
+    right: -100px;
+    width: 80px;
+    height: 100%;
+    border-left: 80px solid var(--main-color);
+    border-bottom: 80px solid var(--main-color);
+    z-index: -1;
+}
+
+@media (max-width: 1000px) {
+    section.about .container {
+        flex-wrap: wrap;
+    }
+
+    section.about .container .text {
+        margin-left: 0;
+        margin-top: 100px;
+    }
+
+    section.about .container .image-container {
+        margin: -100px auto 0px;
+    }
+
+    section.about .container .image-container::before, section.about .container .image-container::after {
+        display: none;
+    }
+}
+
+@media (max-width: 576px) {
+    section.about img {
+        width: 300px;
+        height: 300px;
+    }
+}
+
+/* about end */
